--- a/index.html
+++ b/index.html
@@ -150,6 +150,61 @@
       </ul>
     </section>
 
+<section id="resume" class="card" style="margin-top:18px">
+      <h3>Resume</h3>
+
+      <h4 style="margin-top:12px">Work Experience</h4>
+      <div style="color:var(--muted);margin-top:8px">
+        <p><strong>Lagos State Polytechnic Ikorodu</strong> — Technical Lead<br>
+        <small>Jul 2025 – Oct 2025 | Lagos State, Nigeria</small><br>
+        • Led technical initiatives and ensured project completion within deadlines.<br>
+        • Collaborated with cross-functional teams to enhance customer service.<br>
+        • Improved data analysis processes to boost organizational efficiency.</p>
+
+        <p><strong>Total Apex Media</strong> — Content Writer<br>
+        <small>Mar 2025 – Oct 2025 | United States, Remote</small><br>
+        • Created and optimized SEO-compliant content across digital platforms.<br>
+        • Utilized tools like Slack and Google Suite to streamline writing workflows.</p>
+
+        <p><strong>Lyfebites LEMP</strong> — Software Quality Assurance Tester<br>
+        <small>Jul 2022 – Jul 2023 | Greater London, England, Remote</small><br>
+        • Performed software testing and QA using Jira and Azure.<br>
+        • Collaborated with dev teams to enhance software performance and reliability.</p>
+      </div>
+
+      <h4 style="margin-top:18px">Education</h4>
+      <div style="color:var(--muted);margin-top:8px">
+        <p><strong>Crescent University Abeokuta</strong> — Bachelor of Science, Computer Science<br>
+        <small>Oct 2024 – Jul 2027 | Abeokuta, Nigeria</small></p>
+      </div>
+
+      <h4 style="margin-top:18px">Certifications</h4>
+      <ul style="color:var(--muted);margin-top:8px">
+        <li>Idea Generation Certificate</li>
+        <li>AI for Beginners & AI for Business Professionals</li>
+        <li>Cybersecurity Fundamentals</li>
+        <li>Data Science and Analytics</li>
+        <li>Certified Software Tester (CSTE)</li>
+        <li>JavaScript Algorithms and Data Structures</li>
+        <li>Machine Learning with Python</li>
+        <li>Responsive Web Design, HTML/CSS</li>
+        <li>WordPress Website Design</li>
+      </ul>
+
+      <h4 style="margin-top:18px">Skills & Technologies</h4>
+      <ul style="color:var(--muted);margin-top:8px;columns:2">
+        <li>Python, JavaScript, C#, HTML, CSS</li>
+        <li>Microsoft Azure, AWS (EC2, S3, Lambda)</li>
+        <li>QA Automation, Selenium, Jira, Azure</li>
+        <li>Cloud Computing, CI/CD, GitHub Actions</li>
+        <li>Data Analysis, AI, Machine Learning</li>
+        <li>Leadership, Collaboration, Communication</li>
+      </ul>
+
+      <h4 style="margin-top:18px">Interests</h4>
+      <p style="color:var(--muted)">Calisthenics, Reading, Gardening, Chess</p>
+    </section>
+    
     <section id="contact" class="card" style="margin-top:18px">
       <h3>Contact</h3>
       <p style="color:var(--muted)">Email: <a href="mailto:haneef@example.com" style="color:var(--accent-2);text-decoration:none">haneef@example.com</a></p>
