--- a/index.html
+++ b/index.html
@@ -43,9 +43,66 @@
       .grid{grid-template-columns:1fr}
       .logo{width:44px;height:44px}
     }
+
+    /* Moving radio wave background */
+.background-waves {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+  background: radial-gradient(circle at center, rgba(11,132,255,0.1), transparent 70%);
+}
+
+.wave {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  height: 500px;
+  background: radial-gradient(circle, rgba(11,132,255,0.2) 0%, transparent 70%);
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0.8);
+  animation: pulse 6s infinite ease-in-out;
+  filter: blur(80px);
+}
+
+.wave.delay {
+  animation-delay: 2s;
+  opacity: 0.6;
+}
+
+.wave.slow {
+  animation-duration: 10s;
+  opacity: 0.4;
+}
+
+@keyframes pulse {
+  0% {
+    transform: translate(-50%, -50%) scale(0.7);
+    opacity: 0.4;
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(1.3);
+    opacity: 0.7;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(0.7);
+    opacity: 0.4;
+  }
+}
+
   </style>
 </head>
 <body>
+  <div class="background-waves">
+  <div class="wave"></div>
+  <div class="wave delay"></div>
+  <div class="wave slow"></div>
+</div>
+
   <header>
     <div class="container nav">
       <div class="brand">
