--- a/index.html
+++ b/index.html
@@ -7,111 +7,120 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
     :root{
-      --bg:#0b0b0b;
-      --card:#0f0f0f;
-      --accent:#000000;
-      --muted:#9aa0a6;
-      --glass: rgba(255,255,255,0.03);
-      --accent-2: #0b84ff;
+      --bg:#f8f9fa;
+      --card:#ffffff;
+      --muted:#6c757d;
+      --accent:#0b84ff;
+      --glass: rgba(255,255,255,0.5);
     }
+
     *{box-sizing:border-box}
-    body{margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; background:linear-gradient(180deg,var(--bg),#060606); color:#e6eef3}
+    body{
+      margin:0;
+      font-family:Inter, system-ui;
+      background:#f3f6f9;
+      color:#1a1a1a;
+    }
+
     .container{max-width:1100px;margin:0 auto;padding:24px}
-    header{position:sticky;top:0;background:linear-gradient(180deg,rgba(11,11,11,0.9),rgba(11,11,11,0.6));backdrop-filter:blur(6px);z-index:50}
-    .nav{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
+
+    header{
+      position:sticky;top:0;
+      background:rgba(255,255,255,0.9);
+      backdrop-filter:blur(6px);
+      border-bottom:1px solid #e3e3e3;
+      z-index:50;
+    }
+
+    .nav{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
+
     .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:52px;height:52px;border-radius:12px;background:var(--card);display:flex;align-items:center;justify-content:center;font-weight:700;font-family:'Playfair Display';font-size:20px}
+
+    .logo{
+      width:52px;height:52px;
+      border-radius:12px;
+      background:#eaeff5;
+      display:flex;align-items:center;justify-content:center;
+      font-weight:700;font-family:'Playfair Display';font-size:20px;
+    }
+
     nav ul{display:flex;gap:18px;list-style:none;margin:0;padding:0}
-    nav a{color:var(--muted);text-decoration:none;font-weight:600}
-    .hero{display:grid;grid-template-columns:1fr 380px;gap:28px;align-items:center;padding:48px 0}
-    .intro h1{font-family:'Playfair Display',serif;font-size:40px;margin:0}
-    .intro p{color:var(--muted);margin:14px 0}
-    .type{color:var(--accent-2);font-weight:700}
-    .profile{background:var(--card);padding:18px;border-radius:12px}
-    .profile .avatar{
+    nav a{text-decoration:none;color:#555;font-weight:600}
+
+    .hero{
+      display:grid;
+      grid-template-columns:1fr 380px;
+      gap:28px;
+      align-items:center;
+      padding:48px 0;
+    }
+
+    .intro h1{
+      font-family:'Playfair Display';
+      font-size:40px;margin:0;
+    }
+
+    .intro p{color:var(--muted)}
+    .type{color:var(--accent);font-weight:700}
+
+    .profile{
+      background:var(--card);
+      padding:18px;
+      border-radius:12px;
+      box-shadow:0 4px 20px rgba(0,0,0,0.06);
+    }
+
+    .avatar{
       width:100%;
       height:300px;
-      background:#000; 
       border-radius:8px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:18px;
-      color:var(--muted)
+      overflow:hidden;
+      background:#ddd;
     }
+
+    .avatar img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      border-radius:8px;
+    }
+
     .grid{display:grid;grid-template-columns:1fr 1fr;gap:18px}
-    section.card{background:var(--card);padding:18px;border-radius:12px}
-    .skills li{margin-bottom:8px}
-    footer{margin-top:36px;padding:28px 0;color:var(--muted)}
+
+    section.card{
+      background:var(--card);
+      padding:18px;
+      border-radius:12px;
+      box-shadow:0 4px 20px rgba(0,0,0,0.06);
+    }
+
+    footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e5e5e5;}
+
     .social{display:flex;gap:12px}
-    .top{position:fixed;right:18px;bottom:18px;background:var(--accent-2);border-radius:999px;padding:10px 12px;cursor:pointer}
+
+    .top{
+      position:fixed;
+      right:18px;bottom:18px;
+      background:var(--accent);
+      border-radius:999px;
+      padding:10px 12px;
+      cursor:pointer;
+      color:#fff;
+      display:none;
+    }
+
     @media(max-width:900px){
       .hero{grid-template-columns:1fr;}
-      .profile{order: -1}
+      .profile{order:-1}
       .grid{grid-template-columns:1fr}
       .logo{width:44px;height:44px}
     }
-
-    /* Moving radio wave background */
-.background-waves {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: -1;
-  background: radial-gradient(circle at center, rgba(11,132,255,0.1), transparent 70%);
-}
-
-.wave {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 500px;
-  height: 500px;
-  background: radial-gradient(circle, rgba(11,132,255,0.2) 0%, transparent 70%);
-  border-radius: 50%;
-  transform: translate(-50%, -50%) scale(0.8);
-  animation: pulse 6s infinite ease-in-out;
-  filter: blur(80px);
-}
-
-.wave.delay {
-  animation-delay: 2s;
-  opacity: 0.6;
-}
-
-.wave.slow {
-  animation-duration: 10s;
-  opacity: 0.4;
-}
-
-@keyframes pulse {
-  0% {
-    transform: translate(-50%, -50%) scale(0.7);
-    opacity: 0.4;
-  }
-  50% {
-    transform: translate(-50%, -50%) scale(1.3);
-    opacity: 0.7;
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(0.7);
-    opacity: 0.4;
-  }
-}
   </style>
 </head>
 <body>
-
-<div class="background-waves">
-  <div class="wave"></div>
-  <div class="wave delay"></div>
-  <div class="wave slow"></div>
-</div>
 
 <header>
   <div class="container nav">
@@ -122,6 +131,7 @@
         <div style="font-size:12px;color:var(--muted)">Aspiring Cloud Engineer</div>
       </div>
     </div>
+
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
@@ -137,18 +147,20 @@
 
   <section class="hero">
     <div class="intro">
-      <h1>Hi, I'm <span style="font-family:'Playfair Display';font-size:44px">Haneef</span></h1>
+      <h1>Hi, I'm <span style="font-size:44px">Haneef</span></h1>
       <p class="type"><span id="typed"></span></p>
-      <p>I am an aspiring cloud engineer with experience in QA testing, software development and graphic design. I build resilient applications and love automating infrastructure.</p>
+      <p>I am an aspiring cloud engineer with experience in QA testing, software development and graphic design.</p>
 
       <div style="margin-top:18px">
-        <a href="#work" style="background:var(--accent-2);padding:10px 14px;border-radius:8px;text-decoration:none;color:#fff;font-weight:700">See my work</a>
-        <a href="#contact" style="margin-left:12px;color:var(--muted);text-decoration:none">Contact</a>
+        <a href="#work" style="background:var(--accent);padding:10px 14px;border-radius:8px;text-decoration:none;color:#fff;font-weight:700">See my work</a>
       </div>
     </div>
 
     <aside class="profile">
-      <div class="avatar">PROFILE PIC</div>
+      <div class="avatar">
+        <img src="WhatsApp Image 2025-11-06 at 10.21.52_428c4073.jpg" alt="Haneef Profile Picture">
+      </div>
+
       <div style="display:flex;justify-content:space-between;margin-top:12px">
         <div>
           <div style="font-weight:700">Email</div>
@@ -164,13 +176,13 @@
 
   <section id="about" class="card">
     <h3>About me</h3>
-    <p style="color:var(--muted)">I am a university student studying computer science with a passion for cloud computing, automation and DevOps practices. I enjoy testing, designing, and developing solutions that scale.</p>
+    <p style="color:var(--muted)">I am a university student studying computer science with a passion for cloud computing, automation and DevOps practices.</p>
   </section>
 
   <section class="grid" style="margin-top:18px">
     <div class="card">
       <h4>Technical skills</h4>
-      <ul class="skills">
+      <ul>
         <li>Linux, Bash</li>
         <li>Docker, Kubernetes (learning)</li>
         <li>AWS — EC2, S3, Lambda, IAM</li>
@@ -180,63 +192,51 @@
     </div>
 
     <div class="card">
-      <h4>Employment</h4>
-      <h5 style="margin-top:12px">University modules</h5>
-      <div style="display:flex;gap:8px;margin-top:8px">
-        <div style="flex:1">
-          <strong>Year 1</strong>
-          <ul style="color:var(--muted)">
-            <li>Introduction to Programming</li>
-            <li>Discrete Mathematics</li>
-            <li>Computer Systems</li>
-          </ul>
-        </div>
-        <div style="flex:1">
-          <strong>Year 2</strong>
-          <ul style="color:var(--muted)">
-            <li>Data Structures</li>
-            <li>Operating Systems</li>
-            <li>Software Engineering</li>
-          </ul>
-        </div>
-      </div>
+      <h4>Education</h4>
+      <strong>Year 1</strong>
+      <ul style="color:var(--muted)">
+        <li>Introduction to Programming</li>
+        <li>Discrete Mathematics</li>
+        <li>Computer Systems</li>
+      </ul>
+
+      <strong>Year 2</strong>
+      <ul style="color:var(--muted)">
+        <li>Data Structures</li>
+        <li>Operating Systems</li>
+        <li>Software Engineering</li>
+      </ul>
     </div>
   </section>
 
-  <!-- PROJECTS SECTION -->
   <section id="work" class="card" style="margin-top:18px">
     <h3>Projects / Work</h3>
 
     <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:14px">
 
-      <div style="background:var(--card);padding:16px;border-radius:8px">
+      <div class="card">
         <h4>Automatic Backup System</h4>
-        <p style="color:var(--muted)">Automates daily data backups to Amazon S3 using Python and AWS services.</p>
-        <a href="https://github.com/haneeo3/Automatic-Backup-System" style="color:var(--accent-2);text-decoration:none;font-weight:600">View on GitHub →</a>
+        <p style="color:var(--muted)">Automates daily data backups to Amazon S3 using Python.</p>
       </div>
 
-      <div style="background:var(--card);padding:16px;border-radius:8px">
+      <div class="card">
         <h4>Cloud Cost Calculator</h4>
-        <p style="color:var(--muted)">Monitors daily AWS spending and sends alerts using Lambda, SNS, and CloudWatch.</p>
-        <a href="https://github.com/haneeo3/Cloud-Cost-Calculator" style="color:var(--accent-2);text-decoration:none;font-weight:600">View on GitHub →</a>
+        <p style="color:var(--muted)">Monitors AWS spending and sends alerts.</p>
       </div>
 
-      <div style="background:var(--card);padding:16px;border-radius:8px">
+      <div class="card">
         <h4>AWS Static Website</h4>
-        <p style="color:var(--muted)">A responsive portfolio website hosted on Amazon S3 with static hosting enabled.</p>
-        <a href="https://github.com/haneeo3/aws-static-website" style="color:var(--accent-2);text-decoration:none;font-weight:600">View on GitHub →</a>
+        <p style="color:var(--muted)">Responsive portfolio hosted on S3.</p>
       </div>
 
-      <div style="background:var(--card);padding:16px;border-radius:8px">
+      <div class="card">
         <h4>Website Uptime Monitor</h4>
-        <p style="color:var(--muted)">Checks website health every 5 minutes and sends downtime alerts via SNS.</p>
-        <a href="https://github.com/haneeo3/Website-Uptime-Monitor" style="color:var(--accent-2);text-decoration:none;font-weight:600">View on GitHub →</a>
+        <p style="color:var(--muted)">Checks uptime and sends notifications.</p>
       </div>
 
-      <div style="background:var(--card);padding:16px;border-radius:8px">
+      <div class="card">
         <h4>Customer Inquiry Manager</h4>
-        <p style="color:var(--muted)">AI-powered system using AWS Bedrock to process and respond to customer messages.</p>
-        <a href="https://github.com/haneeo3/Customer-Inquiry-Manager" style="color:var(--accent-2);text-decoration:none;font-weight:600">View on GitHub →</a>
+        <p style="color:var(--muted)">AI-powered response automation system.</p>
       </div>
 
     </div>
@@ -244,43 +244,44 @@
 
   <section id="articles" class="card" style="margin-top:18px">
     <h3>Articles</h3>
-    <p style="color:var(--muted)">Articles to be added soon.</p>
+    <p style="color:var(--muted)">Coming soon...</p>
   </section>
 
-  <!-- CONTACT -->
   <section id="contact" class="card" style="margin-top:18px">
     <h3>Contact</h3>
-    <p style="color:var(--muted)">Email: <a href="mailto:olajobihaneef@gmail.com" style="color:var(--accent-2);text-decoration:none">olajobihaneef@gmail.com</a></p>
-    <div style="margin-top:12px" class="social">
-      <a href="https://www.linkedin.com/in/haneef-olajobi" style="color:var(--accent-2)">LinkedIn</a>
-      <a href="https://github.com/haneeo3" style="color:var(--accent-2)">GitHub</a>
-      <a href="#" style="color:var(--accent-2)">Twitter</a>
+    <p>Email: <a href="mailto:olajobihaneef@gmail.com" style="color:var(--accent)">olajobihaneef@gmail.com</a></p>
+    <div class="social" style="margin-top:10px">
+      <a href="https://www.linkedin.com/in/haneef-olajobi" style="color:var(--accent)">LinkedIn</a>
+      <a href="https://github.com/haneeo3" style="color:var(--accent)">GitHub</a>
     </div>
   </section>
 
   <footer>
-    <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
+    <div style="display:flex;justify-content:space-between;flex-wrap:wrap">
       <div>
-        <div style="font-weight:700">Haneef</div>
-        <div style="color:var(--muted);font-size:13px">Aspiring Cloud Engineer • Nigeria</div>
+        <strong>Haneef</strong><br>
+        <span style="font-size:12px">Aspiring Cloud Engineer • Nigeria</span>
       </div>
-      <div style="text-align:right;color:var(--muted)">
-        <div>Built with ❤️ • Deployed on GitHub Pages</div>
-        <div style="font-size:12px;margin-top:6px">© 2025 Haneef</div>
+
+      <div style="text-align:right;font-size:12px">
+        Built with ❤️ • Hosted on GitHub Pages<br>
+        © 2025 Haneef
       </div>
     </div>
   </footer>
 
 </main>
 
-<button class="top" id="topBtn" title="Return to top">↑</button>
+<button class="top" id="topBtn">↑</button>
 
 <script>
   const words = ["Student", "QA Software Tester", "Graphic Designer", "Software Developer", "Aspiring Cloud Engineer"];
   const typedEl = document.getElementById('typed');
   let wIdx = 0, chIdx = 0, deleting = false;
+
   function type(){
     const cur = words[wIdx];
+
     if(!deleting){
       typedEl.textContent = cur.slice(0, chIdx+1);
       chIdx++;
@@ -289,7 +290,8 @@
         setTimeout(type, 900);
         return;
       }
-    } else {
+    } 
+    else {
       typedEl.textContent = cur.slice(0, chIdx-1);
       chIdx--;
       if(chIdx === 0){
@@ -302,10 +304,11 @@
   type();
 
   const topBtn = document.getElementById('topBtn');
-  topBtn.addEventListener('click', ()=>window.scrollTo({top:0,behavior:'smooth'}));
   window.addEventListener('scroll', ()=>{
-    if(window.scrollY > 300) topBtn.style.display = 'block'; else topBtn.style.display = 'none';
+    topBtn.style.display = window.scrollY > 300 ? 'block' : 'none';
   });
+
+  topBtn.addEventListener('click', ()=>window.scrollTo({top:0,behavior:'smooth'}));
 </script>
 
 </body>
