--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+    <meta name="google-site-verification" content="cD5iBtHeSKVAMyM340J7u19lQ32wUTmiHKW76IgH75k" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Haneef Olajobi – Cloud Engineer | Portfolio</title>
 
