--- a/index.html
+++ b/index.html
@@ -198,9 +198,8 @@
         <img src="WhatsApp Image 2025-11-06 at 10.21.52_428c4073.jpg" alt="Haneef Profile Picture">
       </div>
 
-      <!-- Icon links -->
+      <!-- Profile Icon links -->
       <div class="icon-links">
-        <!-- Email -->
         <a href="mailto:olajobihaneef@gmail.com" title="Email Haneef">
           <svg viewBox="0 0 24 24">
             <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 
@@ -208,8 +207,6 @@
             4-8 5-8-5V6l8 5 8-5v2z"/>
           </svg>
         </a>
-
-        <!-- LinkedIn -->
         <a href="https://www.linkedin.com/in/haneef-olajobi" target="_blank" title="LinkedIn Profile">
           <svg viewBox="0 0 24 24">
             <path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 
@@ -219,8 +216,6 @@
             0-4.3-2.6-4.3-2.6 0-3 2-3 4.1V23h-4V8z"/>
           </svg>
         </a>
-
-        <!-- GitHub -->
         <a href="https://github.com/haneeo3" target="_blank" title="GitHub Profile">
           <svg viewBox="0 0 24 24">
             <path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 
@@ -300,17 +295,39 @@
     </div>
   </section>
 
-  <section id="articles" class="card" style="margin-top:18px">
-    <h3>Articles</h3>
-    <p style="color:var(--muted)">Coming soon...</p>
-  </section>
-
+  <!-- Contact Section with icons -->
   <section id="contact" class="card" style="margin-top:18px">
     <h3>Contact</h3>
-    <p>Email: <a href="mailto:olajobihaneef@gmail.com" style="color:var(--accent)">olajobihaneef@gmail.com</a></p>
-    <div class="social" style="margin-top:10px">
-      <a href="https://www.linkedin.com/in/haneef-olajobi" style="color:var(--accent)">LinkedIn</a>
-      <a href="https://github.com/haneeo3" style="color:var(--accent)">GitHub</a>
+    <div class="icon-links">
+      <a href="mailto:olajobihaneef@gmail.com" title="Email Haneef">
+        <svg viewBox="0 0 24 24">
+          <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 
+          2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 
+          4-8 5-8-5V6l8 5 8-5v2z"/>
+        </svg>
+      </a>
+      <a href="https://www.linkedin.com/in/haneef-olajobi" target="_blank" title="LinkedIn Profile">
+        <svg viewBox="0 0 24 24">
+          <path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 
+          6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 
+          4.98 3.5zM.5 8h4V23h-4V8zm7.5 0h3.8v2.1h.1c.5-1 
+          1.8-2.1 3.7-2.1 3.9 0 4.6 2.6 4.6 6V23h-4v-7.9c0-1.9 
+          0-4.3-2.6-4.3-2.6 0-3 2-3 4.1V23h-4V8z"/>
+        </svg>
+      </a>
+      <a href="https://github.com/haneeo3" target="_blank" title="GitHub Profile">
+        <svg viewBox="0 0 24 24">
+          <path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 
+          3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 
+          1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 
+          -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 
+          -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 
+          11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 
+          3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 
+          5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 
+          10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/>
+        </svg>
+      </a>
     </div>
   </section>
 
