--- a/index.html
+++ b/index.html
@@ -104,8 +104,6 @@
 
     footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e5e5e5;}
 
-    .social{display:flex;gap:12px}
-
     .top{
       position:fixed;
       right:18px;bottom:18px;
@@ -173,7 +171,6 @@
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#work">Work</a></li>
-        <li><a href="#articles">Articles</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -198,7 +195,6 @@
         <img src="WhatsApp Image 2025-11-06 at 10.21.52_428c4073.jpg" alt="Haneef Profile Picture">
       </div>
 
-      <!-- Profile Icon links -->
       <div class="icon-links">
         <a href="mailto:olajobihaneef@gmail.com" title="Email Haneef">
           <svg viewBox="0 0 24 24">
@@ -272,26 +268,43 @@
     <h3>Projects / Work</h3>
 
     <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:14px">
+
       <div class="card">
         <h4>Automatic Backup System</h4>
-        <p style="color:var(--muted)">Automates daily data backups to Amazon S3 using Python.</p>
+        <strong>Tools/Services:</strong> Python, AWS S3, Cron Jobs<br>
+        <p style="color:var(--muted)">Automates daily data backups to Amazon S3 with logging for easy monitoring.</p>
       </div>
+
       <div class="card">
         <h4>Cloud Cost Calculator</h4>
-        <p style="color:var(--muted)">Monitors AWS spending and sends alerts.</p>
+        <strong>Tools/Services:</strong> Python, AWS Boto3, Lambda, SNS<br>
+        <p style="color:var(--muted)">Monitors AWS spending and sends notifications when usage exceeds thresholds.</p>
       </div>
+
       <div class="card">
         <h4>AWS Static Website</h4>
-        <p style="color:var(--muted)">Responsive portfolio hosted on S3.</p>
+        <strong>Tools/Services:</strong> AWS S3, CloudFront, HTML/CSS<br>
+        <p style="color:var(--muted)">Responsive portfolio hosted on S3 with global CDN delivery via CloudFront.</p>
       </div>
+
       <div class="card">
         <h4>Website Uptime Monitor</h4>
-        <p style="color:var(--muted)">Checks uptime and sends notifications.</p>
+        <strong>Tools/Services:</strong> Python, AWS Lambda, SNS, CloudWatch<br>
+        <p style="color:var(--muted)">Monitors website uptime and sends real-time alerts when downtime occurs.</p>
       </div>
+
       <div class="card">
         <h4>Customer Inquiry Manager</h4>
-        <p style="color:var(--muted)">AI-powered response automation system.</p>
+        <strong>Tools/Services:</strong> Python, OpenAI API, Flask, AWS S3<br>
+        <p style="color:var(--muted)">Automates AI-powered responses to customer inquiries and stores logs in S3.</p>
       </div>
+
+      <div class="card">
+        <h4>Technical Lead Internship</h4>
+        <strong>Lagos State Polytechnic Ikorodu · Jul 2025 - Oct 2025 · 4 mos · On-site</strong><br>
+        <p style="color:var(--muted)">Supported departmental operations through document management, system setup, and student data organization. Assisted in exam preparations, helped 100-level students with web design projects, and developed a sample website using HTML and CSS.</p>
+      </div>
+
     </div>
   </section>
 
