--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
       <div style="margin-top:18px">
         <a href="#work" style="background:var(--accent);padding:10px 14px;border-radius:8px;text-decoration:none;color:#fff;font-weight:700">See my work</a>
       </div>
+      <div style="margin-top:18px; display:flex; gap:12px">
+  <a href="#work" style="background:var(--accent);padding:10px 14px;border-radius:8px;text-decoration:none;color:#fff;font-weight:700">
+    See my work
+  </a>
+  <a href="Haneef_Olajobi_Resume.pdf" download style="background:#555;padding:10px 14px;border-radius:8px;text-decoration:none;color:#fff;font-weight:700">
+    Resume
+  </a>
+</div>
+
     </div>
 
     <aside class="profile">
