--- a/index.html
+++ b/index.html
@@ -1,339 +1,255 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Haneef Olajobi – Cloud Engineer | Portfolio</title>
-<meta name="description" content="Haneef Olajobi is an aspiring Cloud Engineer with skills in AWS, DevOps, QA Testing, Linux, and Web Development. Explore projects, articles, and cloud journey.">
-<meta name="keywords" content="Haneef, Olajobi, Haneef Olajobi, Cloud Engineer, Aspiring Cloud Engineer, AWS, DevOps, Nigeria Cloud Engineer, Cloud Portfolio, Cloud Projects">
-<meta name="author" content="Haneef Olajobi">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Haneef • Portfolio</title>
 
 <style>
-:root{
-  --bg:#f8f9fa;
-  --card:#ffffff;
-  --muted:#6c757d;
-  --accent:#0b84ff;
-  --glass: rgba(255,255,255,0.5);
-}
+  body {
+    margin:0;
+    font-family:sans-serif;
+    background:#f5f5f5;
+    color:#222;
+  }
 
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:Inter, system-ui;
-  background:#f3f6f9;
-  color:#1a1a1a;
-}
+  header {
+    padding:20px;
+    background:#111;
+    color:#fff;
+  }
 
-.container{max-width:1100px;margin:0 auto;padding:24px}
+  nav a {
+    margin-right:14px;
+    color:#fff;
+    text-decoration:none;
+  }
 
-header{
-  position:sticky;top:0;
-  background:rgba(255,255,255,0.9);
-  backdrop-filter:blur(6px);
-  border-bottom:1px solid #e3e3e3;
-  z-index:50;
-}
+  .container {
+    width:90%;
+    max-width:900px;
+    margin:auto;
+    padding:20px 0;
+  }
 
-.nav{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
+  .card {
+    background:#fff;
+    padding:18px;
+    border-radius:12px;
+    margin-bottom:18px;
+    border:1px solid #ddd;
+  }
 
-.brand{display:flex;align-items:center;gap:12px}
+  h3 {
+    margin-top:0;
+  }
 
-.logo{
-  width:52px;height:52px;
-  border-radius:12px;
-  background:#eaeff5;
-  display:flex;align-items:center;justify-content:center;
-  font-weight:700;font-family:'Playfair Display';font-size:20px;
-}
+  /* GAME AREA */
+  .game-wrapper {
+    display:flex;
+    justify-content:center;
+    width:100%;
+  }
 
-nav ul{display:flex;gap:18px;list-style:none;margin:0;padding:0}
-nav a{text-decoration:none;color:#555;font-weight:600}
+  .play {
+    position:relative;
+    width:100%;
+    max-width:600px;
+    height:400px;
+    background:#bfe7a1;
+    border:2px solid #4caf50;
+    border-radius:14px;
+    overflow:hidden;
+    margin-top:10px;
+  }
 
-.hero{
-  display:grid;
-  grid-template-columns:1fr 380px;
-  gap:28px;
-  align-items:center;
-  padding:48px 0;
-}
+  .caterpillar-head, .segment {
+    position:absolute;
+    width:40px;
+    height:40px;
+    border-radius:50%;
+    background:#2e7d32;
+  }
 
-.intro h1{
-  font-family:'Playfair Display';
-  font-size:40px;margin:0;
-}
+  .caterpillar-head::before,
+  .caterpillar-head::after {
+    content:"";
+    position:absolute;
+    top:10px;
+    width:6px;
+    height:6px;
+    border-radius:50%;
+    background:#fff;
+  }
+  .caterpillar-head::after { left:20px; }
 
-.intro p{color:var(--muted)}
-.type{color:var(--accent);font-weight:700}
+  .leaf {
+    position:absolute;
+    width:30px;
+    height:30px;
+    border-radius:50%;
+    background:#66bb6a;
+  }
 
-.profile{
-  background:var(--card);
-  padding:18px;
-  border-radius:12px;
-  box-shadow:0 4px 20px rgba(0,0,0,0.06);
-}
+  .win {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    padding:16px 24px;
+    background:#ffeb3b;
+    border:2px solid #f9a825;
+    border-radius:12px;
+    font-weight:bold;
+    font-size:18px;
+    display:none;
+    z-index:10;
+    text-align:center;
+  }
 
-.avatar{
-  width:100%;
-  height:300px;
-  border-radius:8px;
-  overflow:hidden;
-  background:#ddd;
-}
+  .level-label {
+    position:absolute;
+    top:10px;
+    left:10px;
+    font-size:18px;
+    background:#fff;
+    padding:6px 10px;
+    border-radius:6px;
+    border:1px solid #4caf50;
+  }
 
-.avatar img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  border-radius:8px;
-}
+  /* CIRCULAR ANALOG STYLE D-PAD */
+  .dpad {
+    position:absolute;
+    bottom:10px;
+    left:50%;
+    transform:translateX(-50%);
+    width:140px;
+    height:140px;
+    background:#111;
+    opacity:0.85;
+    border-radius:50%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+  }
 
-.grid{display:grid;grid-template-columns:1fr 1fr;gap:18px}
+  .d-button {
+    position:absolute;
+    width:40px;
+    height:40px;
+    background:#fff;
+    border-radius:50%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:20px;
+    font-weight:bold;
+    cursor:pointer;
+    user-select:none;
+  }
 
-section.card{
-  background:var(--card);
-  padding:18px;
-  border-radius:12px;
-  box-shadow:0 4px 20px rgba(0,0,0,0.06);
-}
+  .d-up { top:10px; left:50%; transform:translateX(-50%); }
+  .d-down { bottom:10px; left:50%; transform:translateX(-50%); }
+  .d-left { left:10px; top:50%; transform:translateY(-50%); }
+  .d-right { right:10px; top:50%; transform:translateY(-50%); }
 
-footer{margin-top:36px;padding:28px 0;color:var(--muted);border-top:1px solid #e5e5e5;}
-
-.top{
-  position:fixed;
-  right:18px;bottom:18px;
-  background:var(--accent);
-  border-radius:999px;
-  padding:10px 12px;
-  cursor:pointer;
-  color:#fff;
-  display:none;
-}
-
-.icon-links {
-  display: flex;
-  gap: 14px;
-  margin-top: 14px;
-}
-
-.icon-links a {
-  width: 36px;
-  height: 36px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #eaeff5;
-  border-radius: 8px;
-  transition: 0.2s;
-}
-
-.icon-links a:hover {
-  background: var(--accent);
-}
-
-.icon-links svg {
-  width: 18px;
-  height: 18px;
-  fill: #444;
-  transition: 0.2s;
-}
-
-.icon-links a:hover svg {
-  fill: #fff;
-}
-
-@media(max-width:900px){
-  .hero{grid-template-columns:1fr;}
-  .profile{order:-1}
-  .grid{grid-template-columns:1fr}
-  .logo{width:44px;height:44px}
-}
+  @media(max-width:640px){
+    .dpad { width:120px; height:120px; }
+    .d-button { width:36px; height:36px; }
+  }
 </style>
 </head>
+
 <body>
 
 <header>
-  <div class="container nav">
-    <div class="brand">
-      <div class="logo">H</div>
-      <div>
-        <div style="font-family:'Playfair Display';font-size:18px">Haneef</div>
-        <div style="font-size:12px;color:var(--muted)">Aspiring Cloud Engineer</div>
-      </div>
-    </div>
-
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#games">Games</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#work">Work</a>
+    <a href="#games">Games</a>
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
 
 <main class="container">
 
-  <section class="hero">
-    <div class="intro">
-      <h1>Hi, I'm <span style="font-size:44px">Haneef</span></h1>
-      <p class="type"><span id="typed"></span></p>
-      <p>I am an aspiring cloud engineer with experience in QA testing, software development and graphic design.</p>
-
-      <div style="margin-top:18px; display:flex; gap:12px">
-        <a href="#work" style="background:var(--accent);padding:10px 14px;border-radius:8px;text-decoration:none;color:#fff;font-weight:700">
-          See my work
-        </a>
-        <a href="Haneef_Olajobi_Resume.pdf" download style="background:#555;padding:10px 14px;border-radius:8px;text-decoration:none;color:#fff;font-weight:700">
-          Resume
-        </a>
-      </div>
-    </div>
-
-    <aside class="profile">
-      <div class="avatar">
-        <img src="WhatsApp Image 2025-11-06 at 10.21.52_428c4073.jpg" alt="Haneef Profile Picture">
-      </div>
-
-      <div class="icon-links">
-        <a href="mailto:olajobihaneef@gmail.com" title="Email Haneef">
-          <svg viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/></svg>
-        </a>
-        <a href="https://www.linkedin.com/in/haneef-olajobi" target="_blank" title="LinkedIn Profile">
-          <svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V23h-4V8zm7.5 0h3.8v2.1h.1c.5-1 1.8-2.1 3.7-2.1 3.9 0 4.6 2.6 4.6 6V23h-4v-7.9c0-1.9 0-4.3-2.6-4.3-2.6 0-3 2-3 4.1V23h-4V8z"/></svg>
-        </a>
-        <a href="https://github.com/haneeo3" target="_blank" title="GitHub Profile">
-          <svg viewBox="0 0 24 24"><path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/></svg>
-        </a>
-      </div>
-    </aside>
-  </section>
-
   <section id="about" class="card">
-    <h3>About me</h3>
-    <p style="color:var(--muted)">I am a university student studying computer science with a passion for cloud computing, automation and DevOps practices.</p>
+    <h3>About Me</h3>
+    <p>Hi, I'm Haneef. Cloud engineer, builder, curious mind, and someone who occasionally raises a pixel caterpillar.</p>
   </section>
 
-  <section class="grid" style="margin-top:18px">
-    <div class="card">
-      <h4>Technical skills</h4>
-      <ul>
-        <li>Linux, Bash</li>
-        <li>Docker, Kubernetes (learning)</li>
-        <li>AWS — EC2, S3, Lambda, IAM</li>
-        <li>CI/CD — GitHub Actions</li>
-        <li>Python, JavaScript</li>
-      </ul>
-    </div>
-
-    <div class="card">
-      <h4>Education</h4>
-      <strong>Year 1</strong>
-      <ul style="color:var(--muted)">
-        <li>Introduction to Programming</li>
-        <li>Discrete Mathematics</li>
-        <li>Computer Systems</li>
-      </ul>
-
-      <strong>Year 2</strong>
-      <ul style="color:var(--muted)">
-        <li>Data Structures</li>
-        <li>Operating Systems</li>
-        <li>Software Engineering</li>
-      </ul>
-    </div>
+  <section id="work" class="card">
+    <h3>Projects</h3>
+    <p>Some of the things I've built.</p>
   </section>
 
-  <section id="work" class="card" style="margin-top:18px">
-    <h3>Projects / Work</h3>
+  <!-- GAME SECTION -->
+  <section id="games" class="card">
+    <h3>Caterpillar Garden</h3>
+    <p>A tiny project from 2022 that still eats leaves like it's the first day of spring. Now fully playable inside my portfolio.</p>
 
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:14px">
-      <div class="card">
-        <h4>Automatic Backup System</h4>
-        <strong>Tools/Services:</strong> Python, AWS S3, Cron Jobs<br>
-        <p style="color:var(--muted)">Automates daily data backups to Amazon S3 with logging for easy monitoring.</p>
+    <div class="game-wrapper">
+      <div class="play" id="play">
+        <div class="level-label" id="levelDisplay">Level: 1</div>
+        <div class="caterpillar-head" id="head"></div>
+        <div class="win" id="win"></div>
+
+        <!-- D-PAD -->
+        <div class="dpad">
+          <div class="d-button d-up" data-dir="up">▲</div>
+          <div class="d-button d-down" data-dir="down">▼</div>
+          <div class="d-button d-left" data-dir="left">◀</div>
+          <div class="d-button d-right" data-dir="right">▶</div>
+        </div>
+
       </div>
-
-      <div class="card">
-        <h4>Cloud Cost Calculator</h4>
-        <strong>Tools/Services:</strong> Python, AWS Boto3, Lambda, SNS<br>
-        <p style="color:var(--muted)">Monitors AWS spending and sends notifications when usage exceeds thresholds.</p>
-      </div>
-
-      <div class="card">
-        <h4>AWS Static Website</h4>
-        <strong>Tools/Services:</strong> AWS S3, CloudFront, HTML/CSS<br>
-        <p style="color:var(--muted)">Responsive portfolio hosted on S3 with global CDN delivery via CloudFront.</p>
-      </div>
-
-      <div class="card">
-        <h4>Website Uptime Monitor</h4>
-        <strong>Tools/Services:</strong> Python, AWS Lambda, SNS, CloudWatch<br>
-        <p style="color:var(--muted)">Monitors website uptime and sends real-time alerts when downtime occurs.</p>
-      </div>
-
-      <div class="card">
-        <h4>Customer Inquiry Manager</h4>
-        <strong>Tools/Services:</strong> Python, OpenAI API, Flask, AWS S3<br>
-        <p style="color:var(--muted)">Automates AI-powered responses to customer inquiries and stores logs in S3.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Games Section -->
-  <section id="games" class="card" style="margin-top:18px">
-    <h3>Games / Fun Projects</h3>
-    <p style="color:var(--muted)">Play my Caterpillar Game directly here!</p>
-
-    <div class="play" id="play">
-      <div class="level-label" id="levelDisplay">Level: 1</div>
-      <div class="caterpillar-head" id="head"></div>
-      <div class="win" id="win"></div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="card" style="margin-top:18px">
-    <h3>Contact</h3>
-    <div class="icon-links">
-      <a href="mailto:olajobihaneef@gmail.com" title="Email Haneef">
-        <svg viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/></svg>
-      </a>
-      <a href="https://www.linkedin.com/in/haneef-olajobi" target="_blank" title="LinkedIn Profile">
-        <svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V23h-4V8zm7.5 0h3.8v2.1h.1c.5-1 1.8-2.1 3.7-2.1 3.9 0 4.6 2.6 4.6 6V23h-4v-7.9c0-1.9 0-4.3-2.6-4.3-2.6 0-3 2-3 4.1V23h-4V8z"/></svg>
-      </a>
-      <a href="https://github.com/haneeo3" target="_blank" title="GitHub Profile">
-        <svg viewBox="0 0 24 24"><path d="M12 .5C5.7.5.5 5.7.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.5-3.9-1.5-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.6 2.1-1 -2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.2-3.3 -.1-.3-.5-1.6.1-3.3 0 0 1-.3 3.3 1.2a11.4 11.4 0 0 1 6 0C17 5.3 18 5.6 18 5.6c.6 1.7.2 3 .1 3.3.8.9 1.2 2 1.2 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A10.97 10.97 0 0 0 23.5 12C23.5 5.7 18.3.5 12 .5z"/></svg>
-      </a>
     </div>
   </section>
 
 </main>
 
-<footer>
-  <div class="container">© 2025 Haneef Olajobi. All rights reserved.</div>
-</footer>
-
 <script>
-/* Caterpillar Game Script */
+/* GAME VARIABLES */
 const play = document.getElementById('play');
 const head = document.getElementById('head');
 const winMsg = document.getElementById('win');
 const levelDisplay = document.getElementById('levelDisplay');
 
 let headPos = { x: 50, y: 50 };
-const speed = 10;
+let speed = 10;
 let segments = [];
 let leaves = [];
-
 let level = 1;
 let maxLevel = 5;
 let leavesPerLevel = 5;
+
+/* MOVEMENT */
+let direction = null;
+
+function moveCaterpillar(dir) {
+  if (dir === 'up') headPos.y -= speed;
+  if (dir === 'down') headPos.y += speed;
+  if (dir === 'left') headPos.x -= speed;
+  if (dir === 'right') headPos.x += speed;
+
+  headPos.x = Math.max(0, Math.min(play.clientWidth - 40, headPos.x));
+  headPos.y = Math.max(0, Math.min(play.clientHeight - 40, headPos.y));
+}
+
+document.addEventListener('keydown', e => {
+  if (e.key === 'w') direction = 'up';
+  if (e.key === 's') direction = 'down';
+  if (e.key === 'a') direction = 'left';
+  if (e.key === 'd') direction = 'right';
+});
+
+/* TOUCH CONTROLS */
+document.querySelectorAll('.d-button').forEach(btn => {
+  btn.addEventListener('touchstart', () => {
+    direction = btn.dataset.dir;
+  });
+});
 
 function startLevel() {
   winMsg.style.display = "none";
@@ -360,17 +276,9 @@ function startLevel() {
   }
 }
 
-document.addEventListener('keydown', e => {
-  if (e.key === 'ArrowUp') headPos.y -= speed;
-  if (e.key === 'ArrowDown') headPos.y += speed;
-  if (e.key === 'ArrowLeft') headPos.x -= speed;
-  if (e.key === 'ArrowRight') headPos.x += speed;
-
-  headPos.x = Math.max(0, Math.min(play.clientWidth - 40, headPos.x));
-  headPos.y = Math.max(0, Math.min(play.clientHeight - 40, headPos.y));
-});
-
 function update() {
+  if (direction) moveCaterpillar(direction);
+
   head.style.left = headPos.x + 'px';
   head.style.top = headPos.y + 'px';
 
@@ -396,7 +304,7 @@ function update() {
 
       if (leaves.length === 0) {
         if (level < maxLevel) {
-          winMsg.textContent = `Level ${level} Complete! Next Level Loading...`;
+          winMsg.textContent = `Level ${level} complete! Next level...`;
           winMsg.style.display = "block";
           level++;
           setTimeout(startLevel, 1500);
@@ -423,75 +331,6 @@ function addSegment() {
 startLevel();
 update();
 </script>
-
-<style>
-/* Caterpillar Game Styles inside portfolio */
-.play {
-  position:relative;
-  width:100%;
-  max-width:600px;
-  height:400px;
-  background:#bfe7a1;
-  border:2px solid #4caf50;
-  border-radius:12px;
-  overflow:hidden;
-  margin-top:16px;
-}
-
-.caterpillar-head, .segment {
-  position:absolute;
-  width:40px;
-  height:40px;
-  border-radius:50%;
-  background:#2e7d32;
-}
-
-.caterpillar-head::before, .caterpillar-head::after {
-  content:"";
-  position:absolute;
-  top:10px;
-  width:6px;
-  height:6px;
-  border-radius:50%;
-  background:#fff;
-}
-.caterpillar-head::after { left:20px; }
-
-.leaf {
-  position:absolute;
-  width:30px;
-  height:30px;
-  border-radius:50%;
-  background:#66bb6a;
-}
-
-.win {
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%, -50%);
-  padding:16px 24px;
-  background:#ffeb3b;
-  border:2px solid #f9a825;
-  border-radius:12px;
-  font-weight:bold;
-  font-size:18px;
-  display:none;
-  z-index:10;
-  text-align:center;
-}
-
-.level-label {
-  position:absolute;
-  top:10px;
-  left:10px;
-  font-size:18px;
-  background:#fff;
-  padding:6px 10px;
-  border-radius:6px;
-  border:1px solid #4caf50;
-}
-</style>
 
 </body>
 </html>
